ass1/A1_basecode/err.txt
mydraw.cpp: In function ‘void load_globals()’:
mydraw.cpp:76:10: error: ‘Fmyfile’ was not declared in this scope
   while(!Fmyfile.eof())
          ^
make: *** [mydraw] Error 1
